[gd_scene load_steps=4 format=3 uid="uid://btirj2ajv7aig"]

[ext_resource type="Script" path="res://Scripts/units.gd" id="1_pnqu5"]
[ext_resource type="Script" path="res://Scripts/units_effects/effect_on_attack.gd" id="2_luald"]
[ext_resource type="Script" path="res://Scripts/units_effects/effect_on_defence.gd" id="3_m6yu2"]

[node name="unit" type="TextureButton"]
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(3, 3)
focus_mode = 0
disabled = true
toggle_mode = true
script = ExtResource("1_pnqu5")

[node name="effect_on_attack" type="Node" parent="."]
script = ExtResource("2_luald")

[node name="effect_on_defence" type="Node" parent="."]
script = ExtResource("3_m6yu2")

[node name="life" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = 29.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(1, 0, 0, 1)

[connection signal="pressed" from="." to="." method="_on_pressed"]
